--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -18,4 +18,6 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url('@/assets/img/bg.svg');
+  background-size: cover;
 }
