--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -17,7 +17,25 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Lota GrotesqueArial', Helvetica, sans-serif;
   background-image: url('@/assets/img/bg.svg');
   background-size: cover;
+  /* @apply max-2xl:flex max-2xl:justify-center max-2xl:items-center w-full max-2xl:w-[1920px]; */
+}
+
+@font-face {
+  font-family: 'Oceanwide';
+  src: url('@/assets/fonts/Oceanwide/Oceanwide-Semibold.otf') format('otf'),
+    url('@/assets/fonts/Oceanwide/Oceanwide-SemiboldOblique.otf') format('otf');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lota Grotesque';
+  src: url('@/assets/fonts/LotaGrotesque/Los-Andes-Lota-Grotesque-Regular-Bold.otf') format('otf');
+    /* url('@/assets/fonts/LotaGrotesque/Los-Andes-Lota-Grotesque-Regular-Regular.otf') format('otf'),
+    url('@/assets/fonts/LotaGrotesque/Los-Andes-Lota-Grotesque-Regular-Regular-Italic.otf') format('otf'); */
+  font-weight: 400;
+  font-style: normal;
 }
