--- a/src/assets/css/home/home.css
+++ b/src/assets/css/home/home.css
@@ -1,5 +1,6 @@
 @import "../globals.css";
 
 .home-page-container {
-    @apply flex justify-between gap-[35px] pt-[80px] pr-[55px] pl-[55px];
+    @apply justify-between justify-items-center gap-9 grid ssm:grid-cols-1 mdd:grid-cols-2 lgg:grid-cols-3 pt-[80px] pr-[55px] pl-[55px] w-full text-center;
 }
+
